DCSA-3 changed table header

--- a/ui/src/app/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/timestamp-editor/timestamp-editor.component.html
@@ -60,6 +60,7 @@
       </td>
       <td><label><input type="text" pInputText [(ngModel)]="timestamp.locationId"/></label></td>
       <td style="width: 5%">
+        <p-button icon="pi pi-comment"></p-button>
         <p-button icon="pi pi-save" (onClick)="savePortcallTimestamp(timestamp, vesselId)"></p-button>
       </td>
     </tr>
