--- a/ui/src/app/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/timestamp-table/timestamp-table.component.html
@@ -25,16 +25,16 @@
       <th style="width: 5%" pSortableColumn="eventTypeCode">Event Type Code
         <p-sortIcon field="eventTypeCode"></p-sortIcon>
       </th>
-      <th pSortableColumn="logOfCall">Log of call
+      <th pSortableColumn="logOfCall">Log of Timestamp
         <p-sortIcon field="logOfCall"></p-sortIcon>
       </th>
       <th pSortableColumn="eventTimestamp">Event. Timestamp
         <p-sortIcon field="eventTimestamp"></p-sortIcon>
       </th>
-      <th style="width: 7%" pSortableColumn="portFrom">Port From
+      <th pSortableColumn="portFrom" style="width: 7%">Previous Port
         <p-sortIcon field="portFrom"></p-sortIcon>
       </th>
-      <th style="width: 7%" pSortableColumn="portTo">Port To
+      <th pSortableColumn="portTo" style="width: 7%">Port of Call
         <p-sortIcon field="portTo"></p-sortIcon>
       </th>
       <th style="width: 7%" pSortableColumn="nextPort">Next Port
