--- a/ui/src/app/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/timestamp-table/timestamp-table.component.html
@@ -77,7 +77,7 @@
       <td style="width: 7%">{{ timestamp.portOfCall }}</td>
       <td style="width: 7%">{{ timestamp.portNext }}</td>
       <td style="width: 7%">{{ timestamp.direction }}</td>
-      <td style="width: 7%">{{ timestamp.terminalId }}</td>
+      <td style="width: 7%">{{ timestamp.terminal.id }}</td>
       <td>{{ timestamp.locationId }}</td>
       <td style="width: 5%">
         <p-button icon="pi pi-trash"></p-button>
