DCSA-3 added terminal list rest call, changed filter behavior of dropdown in timestamp editor, added change of if table if new timestamp added, added port id to port pipe

--- a/ui/DCSA-Theme.scss
+++ b/ui/DCSA-Theme.scss
@@ -4614,3 +4614,11 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 }
 
 /* Customizations to the designer theme should be defined here */
+body .p-datatable .p-datatable-tbody > tr:nth-child(even) {
+  background-color: $foamWhite;
+  color: $darkNavyBlue;
+}
+body .p-datatable .p-datatable-tbody > tr:nth-child(odd) {
+  background-color: lighten($steelGrey, 50%);
+  color: $darkNavyBlue;
+}
