--- a/ui/src/app/view/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/view/vessel-editor/vessel-editor.component.html
@@ -1,32 +1,44 @@
-<div class="p-fluid">
-  <div class="p-field p-grid">
-    <label for="name" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Vessel name</label>
-    <div class="p-col-12 p-md-10">
-      <input id="name" type="text" pInputText [(ngModel)]=vessel.name>
+<form [formGroup]="vesselFormGroup">
+  <div class="p-fluid">
+    <div class="p-field p-grid">
+      <label for="name" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Vessel name</label>
+      <div class="p-col-12 p-md-10">
+        <input id="name" type="text" formControlName="name" pInputText [(ngModel)]=vessel.name maxlength="100">
+        <span *ngIf="vesselFormGroup.get('name').hasError('maxlength')" class="p-invalid">The vessel name should be maximal 100 characters long</span>
+        <span *ngIf="vesselFormGroup.get('name').hasError('minlength')" class="p-invalid">The vessel name should be at least 1 character long</span>
+        <span *ngIf="vesselFormGroup.get('name').hasError('required') && vesselFormGroup.get('name').touched" class="p-invalid">The vessel name is required</span>
+      </div>
     </div>
-  </div>
-  <div class="p-field p-grid">
-    <label for="imo" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">IMO</label>
-    <div class="p-col-12 p-md-10">
-      <input id="imo" type="text" pInputText [(ngModel)]=vessel.imo>
+    <div class="p-field p-grid">
+      <label for="imo" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">IMO</label>
+      <div class="p-col-12 p-md-10">
+        <input id="imo" type="text" formControlName="imo" pInputText [(ngModel)]=vessel.imo maxlength="7">
+        <span *ngIf="vesselFormGroup.get('imo').hasError('required') && vesselFormGroup.get('imo').touched" class="p-invalid">The IMO is required</span>
+        <span *ngIf="vesselFormGroup.get('imo').hasError('pattern')" class="p-invalid">The IMO should be 7 digits</span>
+        <span *ngIf="vesselFormGroup.get('imo').hasError('maxlength')" class="p-invalid">Maximum length is 7</span>
+      </div>
     </div>
-  </div>
-  <div class="p-field p-grid">
-    <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">TEU</label>
-    <div class="p-col-12 p-md-10">
-      <p-inputNumber id="teu" mode="decimal" [(ngModel)]=vessel.teu></p-inputNumber>
+    <div class="p-field p-grid">
+      <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">TEU</label>
+      <div class="p-col-12 p-md-10">
+        <p-inputNumber id="teu" mode="decimal" formControlName="teu" [(ngModel)]=vessel.teu></p-inputNumber>
+        <span *ngIf="vesselFormGroup.get('teu').hasError('required') && vesselFormGroup.get('teu').touched" class="p-invalid">TEU is required</span>
+        <span *ngIf="vesselFormGroup.get('teu').hasError('max')" class="p-invalid">The maximal number of TEU is 32767</span>
+      </div>
     </div>
-  </div>
-  <div class="p-field p-grid">
-    <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name or code</label>
-    <div class="p-col-12 p-md-10">
-      <input id="serviceName" type="text" pInputText [(ngModel)]=vessel.serviceNameCode>
+    <div class="p-field p-grid">
+      <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name or code</label>
+      <div class="p-col-12 p-md-10">
+        <input id="serviceName" type="text" formControlName="serviceNameCode" pInputText [(ngModel)]=vessel.serviceNameCode>
+        <span *ngIf="vesselFormGroup.get('serviceNameCode').hasError('maxlength')" class="p-invalid">Maximum length is 255</span>
+      </div>
     </div>
-  </div>
-  <div class="p-field p-grid">
+    <div class="p-field p-grid">
     <span class="p-buttonset">
-        <button (click)="saveVessel()" icon="pi pi-check" label="Save" pButton type="button"></button>
-        <button (click)="cancel()" class="p-button-warning" icon="pi pi-times" label="Cancel" pButton type="button"></button>
+        <button (click)="saveVessel()" icon="pi pi-check" label="Save" pButton type="button" [disabled]="vesselFormGroup.invalid"></button>
+        <button (click)="cancel()" class="p-button-warning" icon="pi pi-times" label="Cancel" pButton
+                type="button"></button>
     </span>
+    </div>
   </div>
-</div>
+</form>
