--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -49,7 +49,7 @@
       <th pSortableColumn="locationId">Location ID
         <p-sortIcon field="locationId"></p-sortIcon>
       </th>
-      <th style="width: 5%">Option</th>
+      <th style="width: 5%"></th>
     </tr>
     <tr>
       <td></td>
