DCSA-3 Finalized paginator

--- a/ui/src/app/view/timestamp-paginator/timestamp-paginator.component.html
+++ b/ui/src/app/view/timestamp-paginator/timestamp-paginator.component.html
@@ -3,5 +3,6 @@
              [rows]="selectedRowSize"
              [showCurrentPageReport]="true"
              [totalRecords]="timestamps.length"
-             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+             [first]="first"
+             currentPageReportTemplate="Page {currentPage} to {totalPages} ({totalRecords} entries)">
 </p-paginator>
