DCSA-3 DCSA added comment PopUp

--- a/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.html
+++ b/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.html
@@ -1,13 +1,33 @@
 <div class="p-fluid">
   <div class="p-col-12 p-md-10">
-    <p-dropdown [options]="delayCodeOptions" [(ngModel)]="timestamp.delayCode"></p-dropdown>
+
+    <p-dropdown [options]="delayCodeOptions" [(ngModel)]="timestamp.delayCode" [filter]="true"
+                filterBy="label,value.name" [group]="false">
+      <ng-template let-delayCode pTemplate="item">
+        <div *ngIf="delayCode.value">
+          <div>{{delayCode.value.smdgCode}}</div>
+          <div class="delayCodeType"><b>{{delayCode.value.delayType}}</b></div>
+          <div class="delayCodeName">{{delayCode.value.name}}</div>
+          <div class="delayCodeDescription">{{delayCode.value.description}}</div>
+        </div>
+      </ng-template>
+    </p-dropdown>
+
   </div>
 
-  <div class="p-col-12 p-md-10">
-    <textarea pInputTextarea [(ngModel)]="timestamp.comment"></textarea>
+  <div id="commentContainer" style="height: 350px" class="p-col-12 p-md-10">
+    <span class="p-float-label">
+    <textarea id="commentbox" pInputTextarea [(ngModel)]="timestamp.comment"></textarea>
+    <label for="commentbox">Comment for new timestamp!</label>
+    </span>
   </div>
 </div>
-
+<div class="p-field p-grid">
+    <span class="p-buttonset">
+            <button (click)="close()" label="Close" pButton
+                    type="button"></button>
+    </span>
+</div>
 
 
 
