DCSA-3 DCSA initials for refresh on delete, row columns, fixes

--- a/ui/src/app/view/app.component.html
+++ b/ui/src/app/view/app.component.html
@@ -9,7 +9,8 @@
   <ng-template #vesselsSelected>
     <div class="main__spaceInnerComponent">
       <p-card>
-        <app-timestamp-table [ports]="ports" [terminals]="terminals"
+        <app-timestamp-table (timeStampDeletedNotifier)="timeStampDeletedHandler($event)"
+                             [ports]="ports" [terminals]="terminals"
                              [timestamps]="portCallTimeStampsForId"
                              [vesselId]="vesselId" (timeStampDeletedNotifier)="timestampDeletedHandler($event)"></app-timestamp-table>
         <app-timestamp-editor (timeStampAddedNotifier)="timeStampAddedHandler($event)"
