DCSA-3 Changed numbering column to timestamp id

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -68,9 +68,9 @@
       <td></td>
     </tr>
   </ng-template>
-  <ng-template pTemplate="body" let-timestamp let-i="rowIndex">
+  <ng-template pTemplate="body" let-timestamp>
     <tr>
-      <td style="width: 2%">{{ i + 1 }}</td>
+      <td style="width: 2%">{{ timestamp.id }}</td>
       <td style="width: 7%">{{ timestamp.timestampType | portCallTimestampTypeToStringPipe: null }}</td>
       <td style="width: 5%">{{ timestamp.classifierCode }}</td>
       <td style="width: 5%">{{ timestamp.eventTypeCode }}</td>
